Fix broken style for seq-length

--- a/src/styles/_prov-retrieval.scss
+++ b/src/styles/_prov-retrieval.scss
@@ -287,6 +287,7 @@
       pointer-events: none;
       position: absolute;
       top: 0;
+      left: 0;
       text-align: center;
       width: 100%;
       font-size: 0.9em;
